<resources>
    <string name="app_name">Quiz</string>
    <string name="str1">MIKE CREATIVE MINDS</string>
    <string name="str2">Disagner Creative</string>
    <string name="str3">IOs GAME</string>
    <string name="str4">l game designer es quien crea y desarrolla conceptualmente un videojuego</string>
    <string name="str5">24k</string>
    <string name="nom">Nombre</string>
    <string name="str_1">opcion1</string>
    <string name="str_2">opcion2</string>
</resources>
